# Fated

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  dev-requirements.txt  mypy.ini  pyrightconfig.json  requirements.txt  run.py  speed-requirements.txt  t.py
.github/: depandabot.yaml
core/: __init__.py  amaya.py  client.py  models.py
core/binds/: __init__.pyi  rst.pyi
core/components/: __init__.py  api.py  destiny.py  git.py  meta.py  mod.py  notes.py
core/psql/: __init__.py  models.py  pool.py  pool.pyi  tables.sql
core/std/: __init__.py  api.py  boxed.py  cache.py  config.example.py  net.py  traits.py
core/utils/: __init__.py  boxed.py  cache.py  config.example.py  consts.py  format.py  interfaces.py  net.py  traits.py  views.py
rst/: Cargo.toml
rst/src/: lib.rs
rst/src/imple/: time.rs
