[package]
name = "rst"
version = "0.1.0"
edition = "2018"
authors = ["nxtlo <dhmony-99@hotmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rst"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }
chrono = "0.4"
humantime = "2.1.0"
futures = "0.3"
rust-crypto = "0.2"
rand = "0.8"

[dependencies.tokio]
version = "1"
features = ["full"]